style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Jersey 15", sans-serif;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}
body {
  background: linear-gradient(135deg, #2a2a2a, #2a2a2a);
  color: white;
}

#header {
  width: 100%;
  height: 100vh;
  background-image: url(Images/Background.png);
  background-size: cover;
  background-position: center;
}

.container {
  padding: 10px 10%;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}

/* Fullscreen loader */
#loader {
  position: fixed;
  width: 100%;
  height: 100%;
  background: #ffffff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

.logo {
  width: 140px;
  margin-bottom: 20px;
}

/* Spinner animation */
.spinner {
  width: 40px;
  height: 40px;
  border: 5px solid #ddd;
  border-top: 5px solid violet;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

/* Animation */
@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

nav ul li {
  display: inline-block;
  list-style: none;
  margin: 10px 20px;
}

nav ul li a {
  color: white;
  text-decoration: none;
  font-size: 18px;
  position: relative;
}

nav ul li a::after {
  content: "";
  width: 0;
  height: 3px;
  background: violet;
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.5s;
}

nav ul li a:hover::after {
  width: 100%;
}

.header-text {
  margin-top: 20%;
  font-size: 30px;
}

.header-text h1 {
  font-size: 60px;
  margin-top: 20px;
}

.header-text h1 span {
  color: violet;
}

/* limit paragraph width on blog header -> just-p*/
.just-p {
  font-size: 16px;
  max-width: 800px;
  margin: 20px 0 0;
  line-height: 1.6;
  text-align: left;
}
/*----------------about----------------*/
#about {
  padding: 80px 0;
  color: #ababab;
}

.row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.about-col-1 {
  flex-basis: 35%;
}
.about-col-1 img {
  width: 100%;
  border-radius: 15px;
}

.about-col-2 {
  flex-basis: 100%;
}

.sub-title {
  font-size: 60px;
  font-weight: 600;
  color: white;
}

.tab-titles {
  display: flex;
  margin: 20px 0 40px;
}

.tab-links {
  margin-right: 50px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  position: relative;
}

.tab-links::after {
  content: "";
  width: 0;
  height: 3px;
  background: violet;
  position: absolute;
  left: 0;
  bottom: -8px;
  transition: 0.5s;
}

.tab-links.active-link::after {
  width: 50%;
}

.tab-contents ul li {
  list-style-type: none;
  margin: 10px 0;
}

.tab-contents ul li span {
  color: rgb(248, 136, 248);
  font-size: 14px;
}

.tab-contents {
  display: none;
}

.tab-contents.active-tab {
  display: block;
}
/*------------------projects-----------------*/

#projects {
  padding: 50px 0;
}

.work-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 40px;
  margin-top: 50px;
}

.work {
  border-radius: 10px;
  position: relative;
  overflow: hidden;
}

.work img {
  width: 100%;
  border-radius: 10px;
  display: block;
  transition: transform 0.5s;
}

.layer {
  width: 100%;
  height: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.6), violet);
  border-radius: 10px;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 0 40px;
  text-align: center;
  font-size: 14px;
  transition: height 0.5s;
}

.layer h3 {
  font-weight: 500;
  margin-bottom: 20px;
}

.layer a {
  margin-top: 20px;
  color: violet;
  text-decoration: none;
  font-size: 18px;
  line-height: 60px;
  background: white;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  text-align: center;
}

.work:hover img {
  transform: scale(1.1);
}

.work:hover .layer {
  height: 100%;
}

.btn {
  display: block;
  margin: 50px auto;
  width: fit-content;
  border: 1px solid violet;
  padding: 14px 50px;
  border-radius: 6px;
  text-decoration: none;
  color: white;
  transition: background 0.5s;
}

.btn:hover {
  background: violet;
}

.btn.btn2 {
  /* or simply .btn2 if you don’t need the .btn base */
  display: inline-block;
  background: violet;
}

.contact-left {
  flex-basis: 35%;
}

.contact-right {
  flex-basis: 60%;
}

.contact-left p {
  margin-top: 30px;
}

.contact-left p i {
  color: violet;
  margin-right: 15px;
  font-size: 25px;
}

.social-icons {
  margin-top: 30px;
}

.social-icons a {
  text-decoration: none;
  font-size: 30px;
  margin-right: 15px;
  color: #ababab;
  display: inline-block;
  transition: transform 0.5s;
}

.social-icons a:hover {
  color: violet;
  transform: translateY(-5px);
}

.contact-right form .btn2 {
  padding: 14px 60px;
  font-size: 18px;
  margin-top: 20px;
  cursor: pointer;
}

.contact-right form {
  width: 100%;
}

form input,
form textarea {
  width: 100%;
  border: 0;
  outline: none;
  background: #3c3c3c;
  padding: 15px;
  margin: 15px 0;
  color: white;
  font-size: 18px;
  border-radius: 6px;
}

/* confirmation message shown after contact form submission */
.confirmation {
  margin-top: -40px;
  color: #61b752;
  display: block;
}

form btn2 {
  padding: 14px 60px;
  font-size: 18px;
  margin-top: 20px;
  cursor: pointer;
}

.copyright {
  width: 100%;
  text-align: center;
  padding: 25px;
  background: #3c3c3c;
  font-weight: 300;
  margin-top: 20px;
}

.copyright i {
  color: violet;
}

/*---------------css for phone screen-----------------*/

nav .fa-solid {
  display: none;
}

@media only screen and (min-width: 0) and (max-width: 767px) {
  #header {
    background-image: url(Images/Phone_background.png);
    background-size: cover;
    background-position: center;
  }

  .header-text {
    margin-top: 40%;
    font-size: 16px;
  }

  .header-text h1 {
    font-size: 30px;
  }

  nav .fa-solid {
    display: block;
    font-size: 25px;
  }

  nav ul {
    background: violet;
    position: fixed;
    top: 0;
    right: -200px;
    width: 200px;
    height: 100vh;
    padding-top: 50px;
    z-index: 2;
    transition: right 0.5s;
  }

  nav ul li {
    display: block;
    margin: 25px;
  }

  nav ul .fa-solid {
    position: absolute;
    top: 25px;
    left: 25px;
    cursor: pointer;
  }

  .sub-title {
    font-size: 40px;
  }

  .about-col-1,
  .about-col-2 {
    flex-basis: 100%;
  }

  .about-col-1 {
    margin-bottom: 30px;
  }

  .about-col-2 {
    font-size: 14px;
  }

  .tab-links {
    font-size: 16px;
    margin-right: 20px;
  }

  .contact-left,
  .contact-right {
    flex-basis: 100%;
  }
  .copyright {
    font-size: 14px;
  }
}

/*------------------css for tablet screen-----------------*/

@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
  #header {
    background-image: url(Images/Tablet_Portrait.png);
  }
  .header-text {
    margin-top: 80%;
    font-size: 22px;
  }

  .header-text h1 {
    font-size: 45px;
  }

  nav .fa-solid {
    display: block;
    font-size: 25px;
  }

  nav ul {
    background: violet;
    position: fixed;
    top: 0;
    right: -200px;
    width: 200px;
    height: 100vh;
    padding-top: 50px;
    z-index: 2;
    transition: right 0.5s;
  }

  nav ul li {
    display: block;
    margin: 25px;
  }

  nav ul .fa-solid {
    position: absolute;
    top: 25px;
    left: 25px;
    cursor: pointer;
  }

  .sub-title {
    font-size: 50px;
  }

  .about-col-1,
  .about-col-2 {
    flex-basis: 100%;
  }

  .about-col-1 {
    margin-bottom: 30px;
  }

  .about-col-2 {
    font-size: 16px;
  }

  .tab-links {
    font-size: 18px;
    margin-right: 20px;
  }

  .contact-left,
  .contact-right {
    flex-basis: 100%;
  }
  .copyright {
    font-size: 16px;
  }
}

@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
  #header {
    background-image: url(Images/Tablet_Landscape.png);
  }
  .header-text {
    margin-top: 80%;
    font-size: 22px;
  }

  .header-text h1 {
    font-size: 45px;
  }

  nav .fa-solid {
    display: block;
    font-size: 25px;
  }

  nav ul {
    background: violet;
    position: fixed;
    top: 0;
    right: -200px;
    width: 200px;
    height: 100vh;
    padding-top: 50px;
    z-index: 2;
    transition: right 0.5s;
  }

  nav ul li {
    display: block;
    margin: 25px;
  }

  nav ul .fa-solid {
    position: absolute;
    top: 25px;
    left: 25px;
    cursor: pointer;
  }

  .sub-title {
    font-size: 50px;
  }

  .about-col-1,
  .about-col-2 {
    flex-basis: 100%;
  }

  .about-col-1 {
    margin-bottom: 30px;
  }

  .about-col-2 {
    font-size: 16px;
  }

  .tab-links {
    font-size: 18px;
    margin-right: 20px;
  }

  .contact-left,
  .contact-right {
    flex-basis: 100%;
  }
  .copyright {
    font-size: 16px;
  }
}

/*-------------my blog---------------*/

#blog {
  padding: 30px 0;
}

.blog-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 40px;
  margin-top: 50px;
}

.blog-list div {
  background: #4b4b4b;
  padding: 40px;
  font-size: 13px;
  font-weight: 300;
  border-radius: 10px;
  transition:
    background 0.5s,
    transform 0.5s;
}

.blog-list div i {
  font-size: 50px;
  margin-bottom: 30px;
}

.blog-list div h2 {
  font-size: 30px;
  font-weight: 500;
  margin-bottom: 15px;
}

.blog-list div a {
  text-decoration: none;
  color: white;
  font-size: 12px;
  margin-top: 20px;
  display: inline-block;
}

.blog-list div:hover {
  background: violet;
  transform: translateY(-10px);
}

/* Floating circle button */
#topBtn {
  position: fixed;
  bottom: 30px;
  right: 30px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background-color: #333;
  color: white;
  border: none;
  font-size: 20px;
  cursor: pointer;
  display: none;
  align-items: center;
  justify-content: center;
  display: flex; /* Center icon */
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
  transition:
    background-color 0.3s,
    transform 0.2s;
}

/* Hover effect */
#topBtn:hover {
  background-color: violet;
  transform: scale(1.1);
}

